--- a/package.json
+++ b/package.json
@@ -30,8 +30,5 @@
   "devDependencies": {
     "tape": "^4.4.0"
   },
-  "homepage": "https://github.com/timoxley/colornames#readme",
-  "dependencies": {
-    "tape": "^1.0.4"
-  }
+  "homepage": "https://github.com/timoxley/colornames#readme"
 }
